--- a/index.html
+++ b/index.html
@@ -3,31 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | NFT preview card component</title>
-
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
+<div class="container">
+  <div class="card_picture">
+    <div class="overlay"></div>
+  </div>
+  <div class="description">
+    <h2>Equilibrium #3429</h2>
+    <p class="soft-blue">Our Equilibrium collection promotes balance and calm.</p>
+    <div class="details">
+      <p class="price">0.041 ETH</p>
+      <p class="time">3 days left</p>
+    </div>
+    <div class="line"></div>
+    <div class="creator">
+      <img src="./images/image-avatar.png" alt="avatar">
+      <p>Creation of <span>Jules Wyvern</span></p>
+    </div>
+  </div>
+</div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.linkedin.com/in/siddanthnayak/">Siddanth Nayak</a>.
   </div>
 </body>
 </html>
